# curve-matcher-py

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: ci.yaml
_modules/: index.html
_modules/curve_matcher/: geometry.html  procrustes_analysis.html  shape_similarity.html
_sources/: api.rst.txt  index.rst.txt
docs/: conf.py
src/curve_matcher/: __init__.py  frechet_distance.py  geometry.py  procrustes_analysis.py  shape_similarity.py
tests/: test_frechet_distance.py  test_geometry.py  test_procrustes_analysis.py  test_shape_similarity.py
